tests/compile_errors/anonymous-object-extra-field.buzz
// Wrong variable type

object ExtraFieldTarget {
    data: str,
}

test "Anonymous object with extra field does not infer named object" {
    _: ExtraFieldTarget = .{
        data = "hello",
        extra = 42,
    };
}
